--- a/index.html
+++ b/index.html
@@ -112,35 +112,31 @@
 				 <section class="applications-area">
 					<div class="container position-relative z-2">
 						<h2 class="text-stroke">APPLICATIONS</h2>
-						<div class="application-img-area position-relative z-1">
-							<div class="row">
-								<div class="col-lg-6">
-									<div class="application-img-wrapper small-img-wrapper">
-										<div class="application-img position-relative z-3">
-											<img src="assets/images/application/application-1.jpg" alt="application">
-											<h6 class="text-uppercase">DENTAL & LAboratory</h6>
-										</div>	
-										<div class="application-img position-relative z-3">
-											<img src="assets/images/application/application-1.jpg" alt="application">
-											<h6 class="text-uppercase">DENTAL & LAboratory</h6>
-										</div>	
-										<div class="application-img position-relative z-3">
-											<img src="assets/images/application/application-1.jpg" alt="application">
-											<h6 class="text-uppercase">DENTAL & LAboratory</h6>
-										</div>	
-									</div>
+						<div class="application-img-area  position-relative z-1">
+							<div class="application-img-inner-wrapper d-flex align-items-start">
+								<div class="application-img-wrapper small-img-wrapper">
+									<div class="application-img position-relative z-3">
+										<img src="assets/images/application/application-1.jpg" alt="application">
+										<h6 class="text-uppercase">DENTAL & LAboratory</h6>
+									</div>	
+									<div class="application-img position-relative z-3">
+										<img src="assets/images/application/application-1.jpg" alt="application">
+										<h6 class="text-uppercase">DENTAL & LAboratory</h6>
+									</div>	
+									<div class="application-img position-relative z-3">
+										<img src="assets/images/application/application-1.jpg" alt="application">
+										<h6 class="text-uppercase">DENTAL & LAboratory</h6>
+									</div>	
 								</div>
-								<div class="col-lg-6">
-									<div class="application-img-wrapper big-img-wrapper">
-										<div class="application-img position-relative z-3">
-											<img src="assets/images/application/application-2.jpg" alt="application">
-											<h6 class="text-uppercase">DENTAL & LAboratory</h6>
-										</div>	
-										<div class="application-img position-relative z-3">
-											<img src="assets/images/application/application-2.jpg" alt="application">
-											<h6 class="text-uppercase">DENTAL & LAboratory</h6>
-										</div>	
-									</div>
+								<div class="application-img-wrapper big-img-wrapper">
+									<div class="application-img position-relative z-3">
+										<img src="assets/images/application/application-2.jpg" alt="application">
+										<h6 class="text-uppercase">DENTAL & LAboratory</h6>
+									</div>	
+									<div class="application-img position-relative z-3">
+										<img src="assets/images/application/application-2.jpg" alt="application">
+										<h6 class="text-uppercase">DENTAL & LAboratory</h6>
+									</div>	
 								</div>
 							</div>
 						</div>
