--- a/index.html
+++ b/index.html
@@ -20,40 +20,55 @@
 	<body>
 
 		<!-- header area start -->
-			<header></header>
+			<header class="header-area">
+				<div class="container-xl">
+					<div class="header-content-info d-flex align-items-center">
+						<a href="#" class="logo">
+							<img src="assets/images/header/header-logo.svg" alt="">
+						</a>
+						<a href="#" class="gast-btn-2 text-uppercase version-2">
+							CONTACT
+						</a>
+					</div>
+				</div>
+			</header>
 		<!-- header area end -->
 		<!-- main section start -->
 			<main>
 				<!-- banner section start -->
-				<section class="banner-area position-relative z-1">
+				<section class="banner-area position-relative z-1 trigger-parallax">
 					<div class="bg-shape">
 					</div>
 					<div class="container position-relative z-4">
 						<div class="row">
 							<div class="banner-content-wrapper">
 								<div class="banner-content-info mb-p text-center">
-									<h1 class="text-uppercase"><span class="linear-text">Quiet Strength</span>,<br><span class="sub-inner-heading">Maximum Performance</span></h1>
-									<p>Discover Gast's <span class="color-green">106R</span> and <span class="color-green">120R</span> Compressors</p>
+									<h1 class="text-uppercase animate-line"><span class="linear-text">Quiet Strength</span>,<br><span class="sub-inner-heading">Maximum Performance</span></h1>
+									<div class="animate-line mb-p">
+										<p>Discover Gast's <span class="color-green">106R</span> and <span class="color-green">120R</span> Compressors</p>
+									</div>
 								</div>
-								<div class="banner-img-wrapper d-flex algin-items-center justify-content-between">
-									<img src="assets/images/banner/banner-1.png" alt="..." class="banner-img-1">
-									<img src="assets/images/banner/banner-2.png" alt="..." class="banner-img-2">
+								<div  class="banner-img-wrapper d-flex algin-items-end justify-content-center trigger-parallax">
+									<img src="assets/images/banner/banner-1.png" alt="..." class="banner-img-1 parallax-img">
+									<img src="assets/images/banner/banner-2.png" alt="..." class="banner-img-2 parallax-img">
 								</div>
 							</div>
 						</div>
 					</div>
-					<span class="text-stroke banner-text-stroke-1">106R</span>
-					<span class="text-stroke banner-text-stroke-2">120R</span>
+					<span class="text-stroke banner-text-stroke-1 parallax-content">106R</span>
+					<span class="text-stroke banner-text-stroke-2 parallax-content">120R</span>
 				</section>
 				<!-- banner section start -->
 				<!-- piston compressor section start -->
-				 <section class="piston-compressor-area">
+				 <section class="piston-compressor-area overflow-hidden">
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-6">
 								<div class="piston-compressor-content mb-p">
-									<h2 class="text-uppercase">Gast 106R: <br><span class="sub-inner-heading">3/4 HP Rocking Piston Compressor</span></h2>
-									<p>The 106R compressor is equipped with patented Sound Shield technology for quieter operation. Its dual voltage capability makes it suitable for global applications, and its high-pressure design enables it to handle various tasks with ease. Check out the video below for all the exciting features and benefits.</p>
+									<h2 class="text-uppercase animate-line">Gast 106R: <br><span class="sub-inner-heading">3/4 HP Rocking Piston Compressor</span></h2>
+									<div class="animate-line mb-p">
+										<p>The 106R compressor is equipped with patented Sound Shield technology for quieter operation. Its dual voltage capability makes it suitable for global applications, and its high-pressure design enables it to handle various tasks with ease. Check out the video below for all the exciting features and benefits.</p>
+									</div>
 								</div>
 							</div>
 							<div class="col-lg-6">
@@ -80,8 +95,10 @@
 						<div class="row flex-row-reverse">
 							<div class="col-lg-6">
 								<div class="piston-compressor-content mb-p">
-									<h2 class="text-uppercase">Gast 106R: <br><span class="sub-inner-heading">3/4 HP Rocking Piston Compressor</span></h2>
-									<p>The 106R compressor is equipped with patented Sound Shield technology for quieter operation. Its dual voltage capability makes it suitable for global applications, and its high-pressure design enables it to handle various tasks with ease. Check out the video below for all the exciting features and benefits.</p>
+									<h2 class="text-uppercase animate-line">Gast 106R: <br><span class="sub-inner-heading">3/4 HP Rocking Piston Compressor</span></h2>
+									<div class="animate-line mb-p">
+										<p>The 106R compressor is equipped with patented Sound Shield technology for quieter operation. Its dual voltage capability makes it suitable for global applications, and its high-pressure design enables it to handle various tasks with ease. Check out the video below for all the exciting features and benefits.</p>
+									</div>
 								</div>
 							</div>
 							<div class="col-lg-6">
@@ -109,33 +126,33 @@
 				 </section>
 				<!-- piston compressor section end -->
 				<!-- applications section start-->
-				 <section class="applications-area">
+				 <section class="applications-area position-relative z-3 overflow-hidden">
 					<div class="container position-relative z-2">
-						<h2 class="text-stroke">APPLICATIONS</h2>
-						<div class="application-img-area  position-relative z-1">
+						<h2 class="text-stroke animate-line">APPLICATIONS</h2>
+						<div class="application-img-area  position-relative z-4">
 							<div class="application-img-inner-wrapper d-flex align-items-start">
 								<div class="application-img-wrapper small-img-wrapper">
 									<div class="application-img position-relative z-3">
 										<img src="assets/images/application/application-1.jpg" alt="application">
-										<h6 class="text-uppercase">DENTAL & LAboratory</h6>
+										<h6 class="text-uppercase animate-line">DENTAL & LAboratory</h6>
 									</div>	
 									<div class="application-img position-relative z-3">
 										<img src="assets/images/application/application-1.jpg" alt="application">
-										<h6 class="text-uppercase">DENTAL & LAboratory</h6>
+										<h6 class="text-uppercase animate-line">DENTAL & LAboratory</h6>
 									</div>	
 									<div class="application-img position-relative z-3">
 										<img src="assets/images/application/application-1.jpg" alt="application">
-										<h6 class="text-uppercase">DENTAL & LAboratory</h6>
+										<h6 class="text-uppercase animate-line">DENTAL & LAboratory</h6>
 									</div>	
 								</div>
 								<div class="application-img-wrapper big-img-wrapper">
 									<div class="application-img position-relative z-3">
 										<img src="assets/images/application/application-2.jpg" alt="application">
-										<h6 class="text-uppercase">DENTAL & LAboratory</h6>
+										<h6 class="text-uppercase animate-line">DENTAL & LAboratory</h6>
 									</div>	
 									<div class="application-img position-relative z-3">
 										<img src="assets/images/application/application-2.jpg" alt="application">
-										<h6 class="text-uppercase">DENTAL & LAboratory</h6>
+										<h6 class="text-uppercase animate-line">DENTAL & LAboratory</h6>
 									</div>	
 								</div>
 							</div>
@@ -147,14 +164,16 @@
 				 <section class="interested-area position-relative z-1">
 					<div class="interested-bg bg-fix" style="background-image: url('assets/images/interested/interested.jpg');"></div>
 					<div class="container">
-						<h2 class="text-stroke">INTERESTED?</h2>
+						<h2 class="text-stroke animate-line">INTERESTED?</h2>
 						<div class="tell-me-box position-relative">
 							<div class="tell-me-area text-center">
 								<div class="tell-me-info">
-									<h2>Tell Me More</h2>
-									<p>For a more comprehensive look at our products, download our free brochures. These resources provide in-depth specifications and explore the wide range of applications for the 106R and 120R compressors.</p>
-									<div class="download-caption text-uppercase position-relative z-1"><span>DOWNLOAD</span></div>
-									<div class="tell-stroke-btn-wrapper d-flex align-items-center justify-content-center">
+									<h2 class="animate-line">Tell Me More</h2>
+									<div class="animate-line mb-p">
+										<p>For a more comprehensive look at our products, download our free brochures. These resources provide in-depth specifications and explore the wide range of applications for the 106R and 120R compressors.</p>
+									</div>
+									<div class="download-caption text-uppercase position-relative z-1 animate-line"><span>DOWNLOAD</span></div>
+									<div class="tell-stroke-btn-wrapper d-flex align-items-center justify-content-center flex-wrap">
 										<a href="#" class="gast-btn-2 position-relative z-1">
 											<span>106R BROCHURE</span>
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -180,8 +199,10 @@
 								<div class="col-lg-6">
 									<div class="contact-caption-wrapper bg-fix">
 										<div class="contact-caption-info mb-p">
-											<h2 class="text-uppercase">Contact Gast</h2>
-											<p>We're here to help you find the perfect compression solution. Fill out the form below, and one of our experts will contact you to discuss how Gast can support your application.</p>
+											<h2 class="text-uppercase animate-line">Contact Gast</h2>
+											<div class="animate-line mb-p">
+												<p>We're here to help you find the perfect compression solution. Fill out the form below, and one of our experts will contact you to discuss how Gast can support your application.</p>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -220,7 +241,16 @@
 			</main>
 		<!-- main section end -->
 		<!-- footer section start -->
-			<footer></footer>
+			<footer class="footer-area">
+				<div class="container-xl">
+					<div class="footer-content-info d-flex align-items-center justify-content-center justify-content-sm-between gap-2 flex-column flex-sm-row">
+						<a href="#" class="footer-logo">
+							<img src="assets/images/header/footer-logo.svg" alt="">
+						</a>
+						<img src="assets/images/header/footer-svg.svg" alt="">
+					</div>
+				</div>
+			</footer>
 		<!-- footer section end -->
 		
 		
@@ -228,8 +258,12 @@
 		<script src="assets/js/jquery.min.js"></script>
 		<!-- bootstrap min pooper js -->
 		<script src="assets/js/bootstrap.bundle.min.js"></script>
-		<!-- jarallax min js -->
-		<script src="assets/js/jarallax.min.js"></script>
+		<!-- gsap-split min js -->
+		<script src="assets/js/gsap-split-text.js"></script>
+		<!-- gsap min js -->
+		<script src="assets/js/gsap.min.js"></script>
+		<!-- scrollTrigger min js -->
+		<script src="assets/js/scrollTrigger.min.js"></script>
 		<!-- magnific min js -->
 		<script src="assets/js/magnific-popup.min.js"></script>
 		<!-- lenis min js -->
